# hidusage

./: Cargo.toml  readme.md
reverse-engineer/keyboard/: corsair-k70-rgb-rapidfire-hid-desc.txt  corsair-k70-rgb-rapidfire-lsusb.txt  corsair-k70-rgb-rapidfire-quick-brown-fox.txt
src/: button.rs  desktop.rs  keyboard.rs  led.rs  lib.rs
